# zoker

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml  rust.yml
bytecode/: Cargo.toml
bytecode/src/: bytecode.rs
compiler/: Cargo.toml
compiler/src/: compiler.rs  error.rs  lib.rs  prover.rs  rewriter.rs  symbol.rs  symbol_table.rs  type_checker.rs  verifier.rs  verifier.sol  zkboo.sol
compiler/tests/: test_rewriter.rs  test_symbol_table.rs
parser/: Cargo.toml
parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs  print.rs  token.rs  zok.lalrpop
parser/tests/: test_ast.rs  test_ast_print.rs  test_grammar.rs
prover/: Cargo.toml
prover/src/: ikos.rs  lib.rs  utils.rs  vector.rs  zkboo.rs  zkboo.sol
prover/tests/: test_3d_vector.rs  test_prover.rs
src/: ast.rs  lib.rs  location.rs  main.rs  print.rs  zoker.lalrpop
tests/: test_ast.rs  test_ast_print.rs  test_grammar.rs  test_location.rs
zoker-parser/: Cargo.toml
zoker-parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  location.rs  print.rs  token.rs  zok.lalrpop
zoker-parser/tests/: test_ast.rs  test_ast_print.rs  test_grammar.rs  test_location.rs
