[package]
name = "zoker-bytecode"
version = "0.1.0"
description = "Zoker bytecode for using zero-knowledge in blockchain"
authors = ["HyeockJinKim <kherootz@gmail.com>"]
edition = "2018"
repository = "https://github.com/HyeockJinKim/zoker"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
