[package]
name = "zoker-parser"
build = "build.rs"
version = "0.1.0"
description = "Zoker parser for using zero-knowledge in blockchain"
authors = ["HyeockJin Kim <kherootz@gmail.com>"]
edition = "2018"
repository = "https://github.com/HyeockJinKim/zoker"
license = "MIT"

[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
assert_matches = "1.3.0"
lalrpop-util = "0.17.2"
num-bigint = "0.2"
regex = "1.3.4"
unic-ucd-ident  = "0.9.0"
