[package]
name = "zoker-parser"
build = "build.rs"
version = "0.1.0"
authors = ["HyeockJinKim <kherootz@gmail.com>"]
edition = "2018"
repository = "https://github.com/HyeockJinKim/zoker"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
assert_matches = "1.3.0"
lalrpop-util = "0.17.2"
regex = "1.3.4"
